--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
            <!-- <span class="title">Senior Web Platform Engineer</span>-->
             <ul class="contact">
                 <!-- <li>+1 347 495 6479</li> -->
-                <li>Web Engineer</li>
+                <li>Senior Web Engineer</li>
                 <li>sherminn.chong@gmail.com</li>
                 <li>
                     <a href="http://github.com/piratefsh">github.com/piratefsh</a>
@@ -30,23 +30,24 @@
                     <div class="item">
                         <h3>Senior Web Platform Engineer,</h3>
                         <span>Teachers Pay Teachers</span>
-                        <span class="dates">2018 - present</span>
+                        <span class="dates">Mar 2018 - present</span>
 
                         <ul>
                             <li>
-                                Build infrastructure that supports all front-end product development. Provide engineering support to product engineers by collaborating and advising on architecture design. Established front-end web best practices across the engineering department.
-                            </li>
-
+                               Established front-end web best practices across the engineering department by implementing visual regression testing, processes and tooling around responsive layouts, documentation, pair-programming, design systems and core UI.
+                           </li>
                             <li>
-                                Implemented use of visual regression testing, established processes and tooling around responsive layouts, web performance, documentation, pair-programming, design systems and core UI.
+                                Unblock product teams by collaborating on architecture design and providing code reviews on a weekly basis. Introduced processes that allow for documenting of 100% of FAQ from product engineers which increased platform teams' responsiveness.
+                           </li>
+                            <li>
+                                Ran web performance experiments with monitoring and succesfully reduced average time of visible render (SpeedIndex) by 31% for 3G users.
                             </li>
-
                         </ul>
                     </div>
                     <div class="item">
                         <h3>Front-end Web Engineer,</h3>
                         <span>Viki</span>
-                        <span class="dates">2016 - 2018</span>
+                        <span class="dates">Feb 2016 - Mar 2018</span>
 
                         <ul>
                             <li>
@@ -61,9 +62,9 @@
                     </div>
 
                     <div class="item">
-                        <h3>Programmer,</h3>
+                        <h3>Participant,</h3>
                         <span>Recurse Center</span>
-                        <span class="dates">Fall 2015</span>
+                        <span class="dates">Aug 2015 - Dec 2015</span>
 
                         <ul>
                             <li>
@@ -77,7 +78,7 @@
                         <h3>Web Developer,</h3>
                         <span>Soft Space</span>
 
-                        <span class="dates">2014 - 2015</span>
+                        <span class="dates">Jul 2014 - Jun 2015</span>
 
                         <ul>
                             <li>
@@ -173,6 +174,7 @@
                     <li>Node.js</li>
                     <li>Web Performance</li>
                     <li>Visual regression testing</li>
+                    <li>Design Systems</li>
                     <li>Ruby on Rails</li>
                     <li>Computer graphics</li>
                     <li>Teaching</li>
